--- a/css/css-v1.css
+++ b/css/css-v1.css
@@ -1,7 +1,7 @@
-/*@font-face {
-	font-family: 'HKGrotesk-Italic';
-	src: local('HKGrotesk-Italic'), local('HKGrotesk-Italic'), url('../fonts/HKGrotesk-Italic.otf') format('truetype');
-}*/
+@font-face {
+	font-family: 'Raleway-Regular';
+	src: local('Raleway-Regular'), local('Raleway-Regular'), url('../fonts/Raleway-Regular.ttf') format('truetype');
+}
 div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -23,8 +23,8 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 body {
-	font-weight: 600;
 	overflow-x: hidden;
+	font-family: 'Raleway-Regular';
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -66,7 +66,7 @@ h1 {
 }
 h2 {
 	font-size: 26px;
-	font-weight: 600;
+	font-weight: 500;
 	text-align: center;
 	margin:0px;
 }
@@ -116,6 +116,12 @@ textarea:focus { outline: none;}
 .colWhite {
 	color: #fff;
 }
+.colCream {
+	color:#f3efe0;
+}
+.backColCream {
+	background-color:#f3efe0; 
+}
 .backColWhite {
 	background-color: #fff;
 }
@@ -140,6 +146,9 @@ textarea:focus { outline: none;}
 .borderRadius {
 	border-radius: 12px;
 }
+.borderYellow {
+	border: 2px solid #c29715;
+}
 
         /*MAIN CLASSES*/
 
@@ -160,6 +169,9 @@ textarea:focus { outline: none;}
 }
 .logoBradA img {
 	width: 100%;
+}
+.mainNavbar a:hover {
+	color:#a6a6a6; 
 }
 
 		/*MAIN SECTIONS*/
@@ -224,11 +236,44 @@ textarea:focus { outline: none;}
 .sqarewWindowsMain {
 	margin-top: -14px;
 }
+.imageOptionsMain {
+	width: 460px;
+}
+div.caruselInnerMain {
+      width:100%;
+      height:600px;
+      min-width:100%;
+      min-height:600px;
+      max-width:100%;
+      max-height:600px;
+      overflow:hidden;
+      margin-top: 100px;
+ }
+.caruselInnerSub {
+ 	width: 60%;
+ 	height: 500px;
+ }
+.carousel-control-next, .carousel-control-prev {
+	opacity: 1;
+}
+.carousel-indicators li {
+	border-radius: 50%;
+	height: 20px;
+	width: 20px;
+}
+.imgDivCarousel {
+ 	width: 140px;
+ 	height: 140px;
+ 	border-radius: 50%;
+ }
+ .imgDivCarousel img {
+ 	width: 100%;
+ }
 .headerText {
 	position: absolute;
 	top: 36%;
-	right: 14%;
-	width: 600px;
+	right: 6%;
+	width: 800px;
 }
 .sendIcon {
 	width: 44px;
@@ -248,7 +293,8 @@ textarea:focus { outline: none;}
 	z-index: 999;
 }
 .knowingMore {
-	width:160px; 
+	width:160px;
+	cursor: pointer; 
 }
 .midIcons {
 	width: 160px;
@@ -304,9 +350,14 @@ textarea:focus { outline: none;}
 .iconEmail img {
 	width: 100%;
 }
-
-/*Test
-}*/
+.backColDarkOpacity {
+	background-color: rgb(0,0,0,.7); 
+}
+.circleDot {
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+}
 
 
 
