--- a/css/css-v1.css
+++ b/css/css-v1.css
@@ -478,8 +478,103 @@ div.caruselInnerMain {
   	background-size: cover;
   	background-color: rgb(0,0,0,.3);
 }
-
-
+.step1FirstImage {
+	margin-top: -90px;
+	margin-bottom: -50px;
+	margin-left: 160px;
+	width: 424px;
+	flex-basis: 424px;
+}
+.step1FirstImage img {
+	width: 100%;
+}
+.h1h3Step1 {
+	width: 1200px;
+}
+.step2FirstImage {
+	margin-top: -50px;
+	margin-bottom: -50px;
+	margin-right: 160px;
+	width: 424px;
+	flex-basis: 424px;
+}
+.step3FirstImage {
+	margin-top: 0px;
+	margin-bottom: -50px;
+	margin-left: 160px;
+	width: 424px;
+	flex-basis: 424px;
+}
+.step2FirstImage img {
+	width: 100%;
+}
+.step3FirstImage img {
+	width: 100%;
+}
+.inspirationTexHeaderPad {
+	padding-bottom: 70px;
+}
+.marTopForStep1 {
+	margin-top: -80px;
+}
+.marTopForStep2 {
+	margin-top: -20px;
+}
+.inspirationSection1 {
+	height: 1030px;
+	background: url(../images/inspirationSection1.jpg) no-repeat top center fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	background-color: rgb(0,0,0,.3);
+}
+.step5FirstImage {
+	margin-top: -50px;
+	margin-left: 160px;
+	width: 424px;
+	flex-basis: 424px;
+}
+.step5FirstImage img {
+	width: 100%;
+}
+.inspirationSection2 {
+	height: 700px;
+	background: url(../images/maximum.jpg) no-repeat center center fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	background-color: rgb(0,0,0,.3);
+}
+.inspirationSection3 {
+	height: 600px;
+	background: url(../images/inspiration3.jpg) no-repeat center center fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	background-color: rgb(0,0,0,.3);
+}
+.inspirationSection4 {
+	height: 600px;
+	background: url(../images/sunshower.jpg) no-repeat center center fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	background-color: rgb(0,0,0,.3);
+}
+.inspirationSection5 {
+	height: 600px;
+	background: url(../images/materials.jpg) no-repeat center center fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	background-color: rgb(0,0,0,.3);
+}
+sunshower.jpg
 
 
 
