--- a/public_html/css/css-v1.css
+++ b/public_html/css/css-v1.css
@@ -22,6 +22,10 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+a:hover {
+	text-decoration: none;	
+	color: #fff;
+}
 body {
 	overflow-x: hidden;
 	font-family: 'Raleway-Regular';
@@ -164,7 +168,13 @@ textarea:focus { outline: none;}
 .h3SmallerBad3 {
 	width: 86%;
 }
-
+.zoomOnHover {
+	transition: transform .5s;
+}
+.zoomOnHover:hover {
+	/*cursor: pointer;*/
+	transform: scale(1.15);
+}
 		/*NAVBAR  */
 
 #navbarNavAltMarkup a {
@@ -444,7 +454,7 @@ div.caruselInnerMain {
 }
 .bathroomWalkInShoweSection3 {
 	height: 860px;
-	background: url(../images/chooseatap.jpg) no-repeat top center fixed; 
+	background: url(../images/chooseatap.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -453,7 +463,7 @@ div.caruselInnerMain {
 }
 .bathroomWalkInShoweSection4 {
 	height: 820px;
-	background: url(../images/bathinshowerout.jpg) no-repeat center center fixed; 
+	background: url(../images/bathinshowerout.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -471,7 +481,7 @@ div.caruselInnerMain {
 }
 .bathroomWalkInShoweSection6 {
 	height: 560px;
-	background: url(../images/washbasintowashyourself.jpg) no-repeat top center fixed; 
+	background: url(../images/washbasintowashyourself.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -522,7 +532,7 @@ div.caruselInnerMain {
 }
 .inspirationSection1 {
 	height: 1030px;
-	background: url(../images/inspirationSection1.jpg) no-repeat top center fixed; 
+	background: url(../images/inspirationSection1.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -540,7 +550,7 @@ div.caruselInnerMain {
 }
 .inspirationSection2 {
 	height: 700px;
-	background: url(../images/maximum.jpg) no-repeat center center fixed; 
+	background: url(../images/maximum.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -549,7 +559,7 @@ div.caruselInnerMain {
 }
 .inspirationSection3 {
 	height: 600px;
-	background: url(../images/inspiration3.jpg) no-repeat center center fixed; 
+	background: url(../images/inspiration3.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -558,7 +568,7 @@ div.caruselInnerMain {
 }
 .inspirationSection4 {
 	height: 600px;
-	background: url(../images/sunshower.jpg) no-repeat center center fixed; 
+	background: url(../images/sunshower.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -567,7 +577,7 @@ div.caruselInnerMain {
 }
 .inspirationSection5 {
 	height: 600px;
-	background: url(../images/materials.jpg) no-repeat center center fixed; 
+	background: url(../images/materials.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -576,7 +586,7 @@ div.caruselInnerMain {
 }
 .furintureSection1 {
 	height: 600px;
-	background: url(../images/cupboardsordrawers.jpg) no-repeat center center fixed; 
+	background: url(../images/cupboardsordrawers.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -585,7 +595,7 @@ div.caruselInnerMain {
 }
 .furintureSection2 {
 	height: 600px;
-	background: url(../images/softopen.jpg) no-repeat center center fixed; 
+	background: url(../images/softopen.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -594,7 +604,7 @@ div.caruselInnerMain {
 }
 .furintureSection3 {
 	height: 660px;
-	background: url(../images/mirrorcabinet3.jpg) no-repeat center center fixed; 
+	background: url(../images/mirrorcabinet3.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -603,7 +613,7 @@ div.caruselInnerMain {
 }
 .furintureSection4 {
 	height: 600px;
-	background: url(../images/semihig4.jpg) no-repeat center center fixed; 
+	background: url(../images/semihig4.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -630,7 +640,7 @@ div.caruselInnerMain {
 }
 .bathsandshowersSection1  {
 	height: 600px;
-	background: url(../images/doublebath2.jpg) no-repeat center center fixed; 
+	background: url(../images/doublebath2.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -657,7 +667,7 @@ div.caruselInnerMain {
 }
 .bathsandshowersSection4  {
 	height: 600px;
-	background: url(../images/whirlpool1.jpg) no-repeat center center fixed; 
+	background: url(../images/whirlpool1.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -666,7 +676,7 @@ div.caruselInnerMain {
 }
 .cranesSection1  {
 	height: 600px;
-	background: url(../images/builtin2.jpg) no-repeat center center fixed; 
+	background: url(../images/builtin2.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -675,7 +685,7 @@ div.caruselInnerMain {
 }
 .cranesSection2  {
 	height: 600px;
-	background: url(../images/mixertap1.jpg) no-repeat center center fixed; 
+	background: url(../images/mixertap1.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -684,7 +694,7 @@ div.caruselInnerMain {
 }
 .cranesSection3  {
 	height: 600px;
-	background: url(../images/termostatic2.jpg) no-repeat center center fixed; 
+	background: url(../images/termostatic2.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -693,7 +703,7 @@ div.caruselInnerMain {
 }
 .cranesSection4  {
 	height: 600px;
-	background: url(../images/chooseatap.jpg.) no-repeat center center fixed; 
+	background: url(../images/chooseatap.jpg.) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -702,7 +712,7 @@ div.caruselInnerMain {
 }
 .cranesSection5  {
 	height: 600px;
-	background: url(../images/waterfalltap3.jpg) no-repeat center center fixed; 
+	background: url(../images/waterfalltap3.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -711,7 +721,7 @@ div.caruselInnerMain {
 }
 .showersSection1 {
 	height: 600px;
-	background: url(../images/showerenclosure3.jpg) no-repeat center center fixed; 
+	background: url(../images/showerenclosure3.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -738,7 +748,7 @@ div.caruselInnerMain {
 }
 .showersSection4 {
 	height: 600px;
-	background: url(../images/sunshower.jpg) no-repeat top center fixed; 
+	background: url(../images/sunshower.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -747,7 +757,7 @@ div.caruselInnerMain {
 }
 .washbasinsSection1 {
 	height: 600px;
-	background: url(../images/washbowl3.jpg) no-repeat center center fixed; 
+	background: url(../images/washbowl3.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -765,7 +775,7 @@ div.caruselInnerMain {
 }
 .washbasinsSection3 {
 	height: 660px;
-	background: url(../images/washbasintop2.jpg) no-repeat center center fixed; 
+	background: url(../images/washbasintop2.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -774,7 +784,7 @@ div.caruselInnerMain {
 }
 .washbasinsSection4 {
 	height: 600px;
-	background: url(../images/washbasinfurniture2.jpg) no-repeat center center fixed; 
+	background: url(../images/washbasinfurniture2.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -784,8 +794,37 @@ div.caruselInnerMain {
 
 
 
+/*For Bootstrap Submenu*/
+@media (min-width: 992px){
+	.dropdown-menu .dropdown-toggle:after{
+		border-top: .3em solid transparent;
+	    border-right: 0;
+	    border-bottom: .3em solid transparent;
+	    border-left: .3em solid;
+	}
 
+	.dropdown-menu .dropdown-menu{
+		margin-left:0; margin-right: 0;
+	}
 
+	.dropdown-menu li{
+		position: relative;
+	}
+	.nav-item .submenu{ 
+		display: none;
+		position: absolute;
+		left:100%; top:-11px;
+		border: none;
+	}
+	.nav-item .submenu-left{ 
+		right:100%; left:auto;
+	}
+
+	.dropdown-menu > li:hover{ background-color: #f1f1f1 }
+	.dropdown-menu > li:hover > .submenu{
+		display: block;
+	}
+}
 
 
 
