--- a/public_html/css/css-v1.css
+++ b/public_html/css/css-v1.css
@@ -251,9 +251,6 @@ textarea:focus { outline: none;}
 .imageGrid {
 	width: 90%;
 }
-.sqarewWindowsMain {
-	margin-top: -14px;
-}
 .imageOptionsMain {
 	width: 460px;
 	margin-top: -16px;
@@ -266,6 +263,7 @@ textarea:focus { outline: none;}
 }
 .imageOptionsMain2 {
 	width: 370px;
+	margin-top: -16px;
 }
 .imageOptionsMain2 h2 {
 	font-size: 20px;
@@ -694,7 +692,7 @@ div.caruselInnerMain {
   	background-color: rgb(0,0,0,.3);
 }
 .bathsandshowersSection3  {
-	height: 660px;
+	height: 720px;
 	background: url(../images/freestandingbath2.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
@@ -802,7 +800,7 @@ div.caruselInnerMain {
   	background-color: rgb(0,0,0,.3);
 }
 .washbasinsSection2 {
-	height: 700px;
+	height: 800px;
 	background: url(../images/doublesink3.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
@@ -811,7 +809,7 @@ div.caruselInnerMain {
   	background-color: rgb(0,0,0,.3);
 }
 .washbasinsSection3 {
-	height: 660px;
+	height: 760px;
 	background: url(../images/washbasintop2.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
@@ -820,7 +818,7 @@ div.caruselInnerMain {
   	background-color: rgb(0,0,0,.3);
 }
 .washbasinsSection4 {
-	height: 600px;
+	height: 700px;
 	background: url(../images/washbasinfurniture2.jpg) no-repeat bottom center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
@@ -850,6 +848,9 @@ div.caruselInnerMain {
 	.imageOptionsMain  {
 		width: 400px;
 	}
+	.bathPage1SmallImg .imageOptionsMain  {
+		width: 460px;
+	}
 	.imageGrid {
 		flex-wrap: wrap;
 		justify-content: center;
@@ -858,6 +859,15 @@ div.caruselInnerMain {
 	.imageGrid img {
 		width: 100%;
 		height: auto;
+	}
+	.bathTextBigImage {
+		margin-top: 40px;
+	}
+	.imageOptionsMain2 {
+		width: 320px;
+	}
+	.bathroomWalkInShoweSection3 {
+		height: 960px;
 	}
 }
 
@@ -877,11 +887,45 @@ div.caruselInnerMain {
 	.landingImageSubb1 {
 		padding-bottom: 40px;
 	}
+	.landingImageSubb2 .imageOptionsMain {
+		margin-top: 0px;
+	}
+	.landingImageSubb5ImgMain {
+		display: block;
+		margin: 0 auto;
+	}
+	.imageOptionsMain2 {
+		width: 460px;
+	}
+	.landingImageSubb5Img2 .imageOptionsMain2 {
+		margin-top: 20px;
+	}
+	.bathsandshowersSection2 {
+		height: 800px;
+	}
+	.showersSection3 {
+		height: 740px;
+	}
+	.washbasinsSection2 {
+		height:900px;
+	}
+	.whiteSectionMargin2 {
+		margin-top: 0px;
+	}
 }
 
 @media (max-width: 1550px) {
 	#navbarNavAltMarkup a {
 	font-size: 18px;
+	}
+	.imageOptionsMain2 {
+		width: 400px;
+	}
+	.cranesSection5 {
+		height: 700px;
+	}
+	.bathsandshowersSection3 {
+		height: 800px;
 	}
 }
 @media (max-width: 1350px) {
@@ -906,6 +950,21 @@ div.caruselInnerMain {
 	}
 	.leftContact {
     width: 500px;
+	}
+	.bathPage1BigImg h1 {
+    font-size: 28px;
+	}
+	.bathPage1BigImg h3 {
+	font-size: 18px;
+	}
+	.bathroomWalkInShoweSection3 {
+		height: 1020px;
+	}
+	.furintureSection3 {
+		height:800px;
+	}
+	.bathsandshowersSection3 {
+		height: 900px;
 	}
 }
 @media (max-width: 1199px) {
@@ -936,6 +995,21 @@ div.caruselInnerMain {
 	.rightContact {
 	width: 700px;
     margin: 20px auto!important;
+	}
+	.imageOptionsMain2 {
+	width: 340px;
+	}
+	.bathroomWalkInShoweSection4 {
+		height: 900px;
+	}
+	.cranesSection5 {
+		height: 760px;
+	}
+	.bathsandshowersSection2 {
+		height: 860px;
+	}
+	.washbasinsSection3  {
+		height: 860px;
 	}
 }
 @media (max-width: 1040px) {
@@ -1014,6 +1088,33 @@ div.caruselInnerMain {
 		font-size: 18px!important;
 		width: 80%!important;
 	}
+	.bathPage1BigImgSection {
+		display: block;
+		width: 100%;
+	}
+	.imageOptionsMain1 {
+    width: 900px;
+    margin: 20px auto;
+	}
+	.bathPage1BigImg h1 {
+    font-size: 34px;
+	}
+	.bathPage1BigImg h3 {
+	font-size: 22px;
+	}
+	.landingImageSubb5Img1 {
+		display: block;
+	}
+	.landingImageSubb5Img2 {
+		display: block;
+	}
+	.imageOptionsMain2 {
+	width: 460px;
+	margin:20px  auto;
+	}
+	.washbasinsSection2 {
+		height: 960px;
+	}
 }
 @media (max-width: 950px) {
 	.caruselInnerSub {
@@ -1036,10 +1137,20 @@ div.caruselInnerMain {
     padding-top: 20px;
 	}
 	.imageOptionsMain  {
-		width: 500px;
-	}
-	.imageOptionsMain  {
 		width: 400px;
+	}
+	.bathPage1SmallImg .imageOptionsMain {
+    width: 400px;
+	}
+	.imageOptionsMain1 {
+    width: 700px;
+    margin: 20px auto;
+	}
+	.bathroomWalkInShoweSection3 {
+		height: 1100px;
+	}
+	.bathroomWalkInShoweSection4 {
+		height: 880px;
 	}
 }
 @media (max-width: 880px) {
@@ -1060,10 +1171,35 @@ div.caruselInnerMain {
 		width: 460px;
 		margin:-0px  auto 20px auto;
 	}
-	.landingImage1 {
+	.bathPage1SmallImg {
+		margin-top:20px; 
+	}
+	.bathPage1SmallImg .imageOptionsMain {
+    width: 460px;
+    margin: 0 auto;
+	}
+	.bathPage1SmallImgsubb {
+		display: block;
+		width: 100%;
+	}
+	.imgOpBath1 {
+		padding-bottom: 40px;
+	}
+	.bathPage1BigImg h1 {
+    font-size: 28px;
+	}
+	.bathPage1BigImg h3 {
+	font-size: 18px;
+	}
+	.landingImageSubb1 {
 		margin-top: 40px;
 	}
-
+	.bathroomWalkInShoweSection3 {
+		height: 860px;
+	}
+	.midIcons {
+		width: 120px;
+	}
 }
 @media (max-width: 870px) {
 	.mark3,
@@ -1086,6 +1222,30 @@ div.caruselInnerMain {
 	.rightContact {
 	width: 500px;
 	}
+	h1 {
+		font-size: 28px;
+		width: 90%;
+		margin:0 auto;
+	}
+	h3 {
+		font-size: 18px;
+		width: 90%;
+		margin:0 auto;
+	}
+	.bathroomWalkInShoweSection4 {
+		height: 740px;
+	}
+	.furintureSection3 {
+		height:700px;
+	}
+	.bathsandshowersSection2 {
+		height: 760px;
+	}
+}
+@media (max-width: 800px) {
+	.bathroomWalkInShoweSection3 {
+		height: 940px;
+	}
 }
 @media (max-width: 720px) {
 	.sliderTextAndCommentSubb {
@@ -1105,6 +1265,37 @@ div.caruselInnerMain {
 	}
 	.indicatorsWidth {
 		font-size: 3em!important;
+	}
+	.imageOptionsMain1 {
+    width: 500px;
+    margin: 30px auto;
+	}
+	.bathPage1BigImg h3 {
+	font-size: 16px;
+	}
+	.bathTextBigImage {
+    margin-top: 20px;
+	}
+	.arrowUpBigImg {
+    width: 60px;
+	}
+	.arrowDownBigImg  {
+    width: 60px;
+	}
+	.bathroomWalkInShoweSection1 {
+		height: 700px;
+	}
+	.bathroomWalkInShoweSection3 {
+		height: 1100px;
+	}
+	.bathroomWalkInShoweSection4 {
+		height: 840px;
+	}
+	.furintureSection3 {
+		height:760px;
+	}
+	.bathsandshowersSection2 {
+		height: 820px;
 	}
 }
 @media (max-width: 580px) {
@@ -1126,6 +1317,30 @@ div.caruselInnerMain {
 	}
 	.leftFooter {
 		width: 320px;
+	}
+	.imageOptionsMain2 {
+	width: 400px;
+	}
+	.bathroomWalkInShoweSection3 {
+		height: 1160px;
+	}
+	.bathroomWalkInShoweSection4 {
+		height: 940px;
+	}
+	.cranesSection2 {
+		height: 660px;
+	}
+	.bathsandshowersSection2 {
+		height: 900px;
+	}
+	.showersSection3 {
+		height: 820px;
+	}
+	.washbasinsSection2 {
+		height: 1060px;
+	}
+	.washbasinsSection3  {
+		height: 1000px;
 	}
 }
 @media (max-width: 530px) {
@@ -1149,6 +1364,36 @@ div.caruselInnerMain {
 	}
 	.rightContact {
 	width: 300px;
+	}
+	.imageOptionsMain1 {
+    width: 90%;
+	}
+	.bathroomWalkInShoweSection1 {
+		height: 760px;
+	}
+	.bathroomWalkInShoweSection3 {
+		height: 1260px;
+	}
+	.bathroomWalkInShoweSection6 {
+		height: 660px;
+	}
+	.furintureSection3 {
+		height:800px;
+	}
+	.cranesSection2 {
+		height: 700px;
+	}
+	.bathsandshowersSection2 {
+		height: 940px;
+	}
+	.bathsandshowersSection1 {
+		height: 700px;
+	}
+	.bathsandshowersSection3 {
+		height: 960px;
+	}
+	.washbasinsSection2 {
+		height: 1160px;
 	}
 }
 @media (max-width: 500px) {
@@ -1174,7 +1419,68 @@ div.caruselInnerMain {
 	.imageOptionsMain h2 {
 		font-size: 20px;
 	}
-
+	.bathPage1SmallImg .imageOptionsMain {
+    width: 320px;
+	}
+	.bathPage1BigImg h1 {
+    margin-top: 12px;
+    font-size: 22px;
+	}
+	.bathPage1BigImg h3 {
+    width: 100%;
+    font-size: 14px;
+	}
+	.bathTextBigImage {
+    margin-top: 10px;
+	}
+	.arrowUpBigImg {
+    width: 40px;
+	}
+	.arrowDownBigImg  {
+    width: 40px;
+	}
+	.bathroomWalkInShoweSection1 {
+		height: 800px;
+	}
+	.imageOptionsMain2 {
+	width: 320px;
+	}
+	.bathroomWalkInShoweSection4 {
+		height: 1000px;
+	}
+	.bathroomWalkInShoweSection5 {
+		height: 640px;
+	}
+	.bathroomWalkInShoweSection6 {
+		height: 700px;
+	}
+	.furintureSection3 {
+		height:900px;
+	}
+	.cranesSection5 {
+		height: 820px;
+	}
+	.bathsandshowersSection2 {
+		height: 1000px;
+	}
+	.bathsandshowersSection3 {
+		height: 1000px;
+	}
+	.showersSection3 {
+		height: 920px;
+	}
+	.showersSection4 {
+		height: 700px;
+	}
+	.washbasinsSection2 {
+		height: 1260px;
+	}
+	.washbasinsSection3  {
+		height: 1140px;
+	}
+	.washbasinsSection4 {
+		height: 700px;
+	}
 }
 @media (max-width: 494px) {
 	.imgAndTextCarusel {
@@ -1187,6 +1493,86 @@ div.caruselInnerMain {
 	}
 	.landingSection1 {
 		height: 800px;
+	}
+	.bathroomWalkInShoweSection1 {
+		height: 860px;
+	}
+	.bathroomWalkInShoweSection2 {
+		height: 660px;
+	}
+	.bathroomWalkInShoweSection3 {
+		height: 1360px;
+	}
+	.bathroomWalkInShoweSection4 {
+		height: 1060px;
+	}
+	.bathroomWalkInShoweSection5 {
+		height: 700px;
+	}
+	.bathroomWalkInShoweSection6 {
+		height: 740px;
+	}
+	.bathroomLayoutSection1 {
+		height: 640px;
+	}
+	.furintureSection3 {
+		height:960px;
+	}
+	.furintureSection4 {
+		height: 660px;
+	}
+	.cranesSection2 {
+		height: 760px;
+	}
+	.cranesSection5 {
+		height: 860px;
+	}
+	.bathsandshowersSection2 {
+		height: 1100px;
+	}
+	.bathsandshowersSection1 {
+		height: 760px;
+	}
+	.bathsandshowersSection3 {
+		height: 1100px;
+	}
+	.showersSection2 {
+		height: 700px;
+	}
+	.showersSection3 {
+		height: 980px;
+	}
+	.washbasinsSection2 {
+		height: 1360px;
+	}
+}
+@media (max-width: 410px) {
+	.bathroomWalkInShoweSection3 {
+		height: 1460px;
+	}
+	.bathroomWalkInShoweSection4 {
+		height: 1160px;
+	}
+	.furintureSection3 {
+		height:1060px;
+	}
+	.cranesSection2 {
+		height: 800px;
+	}
+	.cranesSection5 {
+		height: 900px;
+	}
+	.bathsandshowersSection2 {
+		height: 1160px;
+	}
+	.bathsandshowersSection1 {
+		height: 820px;
+	}
+	.bathsandshowersSection3 {
+		height: 1160px;
+	}
+	.bathsandshowersSection4  {
+		height: 700px;
 	}
 }
 
