last changes to badcamers

--- a/public_html/css/css-v1.css
+++ b/public_html/css/css-v1.css
@@ -1636,6 +1636,10 @@ div.caruselInnerMain {
 	.inspirationSection1 {
 		height: 1500px;
 	}
+	.videoLanding video,
+	.videoInstal video {
+		width: 90%!important;
+	}
 }
 @media (max-width: 580px) {
 	.headerText {
